--- a/notebooks/00_client.ipynb
+++ b/notebooks/00_client.ipynb
@@ -5,7 +5,7 @@
    "id": "4fcc6370",
    "metadata": {},
    "source": [
-    "# Uncertainty Engine SDK example workflows - client setup"
+    "# Client Setup in the Uncertainty Engine SDK"
    ]
   },
   {
@@ -37,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "70b15290",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet uncertainty-engine[vis,notebook]"
+    "!pip install --quiet uncertainty-engine"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9dab2324",
    "metadata": {},
    "outputs": [],
@@ -76,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5775a842",
    "metadata": {},
    "outputs": [],
    "source": [
-    "is_google_colab = True\n",
+    "is_google_colab = False\n",
     "is_local = not is_google_colab"
    ]
   },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a97371ac",
    "metadata": {},
    "outputs": [],
@@ -139,24 +139,65 @@
    "id": "cddde71b",
    "metadata": {},
    "source": [
-    "Run the following in your terminal:\n",
-    "\n",
-    "On mac / linux:\n",
+    "In the *root* directory of your project, make a file named `.env`. Populate the file with:\n",
     "\n",
     "```\n",
-    "export UE_USERNAME=\"your_username\"\n",
-    "export UE_PASSWORD=\"your_password\"\n",
-    "export UE_ACCOUNT_ID=\"your_16_digit_id\"\n",
+    "UE_USERNAME='your_username'\n",
+    "UE_PASSWORD='your_password'\n",
+    "UE_ACCOUNT_ID='your_16_digit_id'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93a15aa9",
+   "metadata": {},
+   "source": [
+    "Next, make sure that your secrets are never git committed. You can do this by adding `.env` to the `.gitignore` file in your project root directory:\n",
     "```\n",
-    "\n",
-    "On windows:\n",
-    "\n",
-    "```\n",
-    "set UE_USERNAME=\"your_username\"\n",
-    "set UE_PASSWORD=\"your_password\"\n",
-    "set UE_ACCOUNT_ID=\"your_16_digit_id\"\n",
-    "```\n",
-    "\n"
+    ".env\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "892113e3",
+   "metadata": {},
+   "source": [
+    "Then load dotenv:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5839e7a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --quiet python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f7abf583",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "# automatically load .env in current directory\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -169,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7f5c28a8",
    "metadata": {},
    "outputs": [],
@@ -179,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "118ab0e1",
    "metadata": {},
    "outputs": [
@@ -187,7 +228,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipython-input-2640184759.py:1: DeprecationWarning: The 'account_id' parameter is deprecated and will be removed in the next release. Fetching account ID from HTTP headers instead.\n",
+      "/var/folders/dn/cm037cfs6x91lt40wn_cx_6c0000gn/T/ipykernel_51278/2509143929.py:1: DeprecationWarning: The 'account_id' parameter is deprecated and will be removed in the next release. Fetching account ID from HTTP headers instead.\n",
       "  client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
      ]
     }
