--- a/notebooks/02_resources.ipynb
+++ b/notebooks/02_resources.ipynb
@@ -2,14 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-        "https://colab.research.google.com/github/digiLab-ai/ue-sdk-helper/blob/main/notebooks/02_resources.ipynb)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "kj7vJjw3SriA"
       },
@@ -23,6 +15,9 @@
         "id": "IN9E2hWDnaDX"
       },
       "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+        "https://colab.research.google.com/github/digiLab-ai/ue-sdk-helper/blob/main/notebooks/02_resources.ipynb)\n",
+        "\n",
         "In this notebook, we look at resource interaction in the Uncertainty Engine."
       ]
     },
@@ -46,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Vuh61NOjRlLk"
       },
       "outputs": [],
       "source": [
-        "!pip install --quiet uncertainty-engine[vis,notebook]"
+        "!pip install --quiet uncertainty-engine"
       ]
     },
     {
@@ -66,14 +61,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "u-TG3x7nS5Hj"
       },
       "outputs": [],
       "source": [
-        "from uncertainty_engine import Client, Environment\n",
-        "import os"
+        "from uncertainty_engine import Client\n",
+        "import os\n",
+        "from pprint import pprint"
       ]
     },
     {
@@ -89,13 +85,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "bjAYuDXKloIt"
       },
       "outputs": [],
       "source": [
-        "is_google_colab = True\n",
+        "is_google_colab = False\n",
         "is_local = not is_google_colab"
       ]
     },
@@ -129,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "v_Fnd_d1Rp3f"
       },
@@ -154,28 +150,52 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "yYUKdsXKTV3U"
-      },
+      "metadata": {},
       "source": [
-        "Run the following in your terminal:\n",
-        "\n",
-        "On mac / linux:\n",
+        "In the *root* directory of your project, make a file named `.env`. Populate the file with:\n",
         "\n",
         "```\n",
-        "export UE_USERNAME=\"your_username\"\n",
-        "export UE_PASSWORD=\"your_password\"\n",
-        "export UE_ACCOUNT_ID=\"your_16_digit_id\"\n",
+        "UE_USERNAME='your_username'\n",
+        "UE_PASSWORD='your_password'\n",
+        "UE_ACCOUNT_ID='your_16_digit_id'\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Next, make sure that your secrets are never git committed. You can do this by adding `.env` to the `.gitignore` file in your project root directory:\n",
         "```\n",
-        "\n",
-        "On windows:\n",
-        "\n",
-        "```\n",
-        "set UE_USERNAME=\"your_username\"\n",
-        "set UE_PASSWORD=\"your_password\"\n",
-        "set UE_ACCOUNT_ID=\"your_16_digit_id\"\n",
-        "```\n",
-        "\n"
+        ".env\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Then load dotenv:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install --quiet python-dotenv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from dotenv import load_dotenv\n",
+        "# automatically load .env in current directory\n",
+        "load_dotenv()"
       ]
     },
     {
@@ -189,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "kS8kYTG7oWyF"
       },
@@ -200,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -208,18 +228,10 @@
         "id": "LXrwB7ZO0VXJ",
         "outputId": "937e9dce-6bed-4df8-efbe-f9753edea847"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/tmp/ipython-input-2640184759.py:1: DeprecationWarning: The 'account_id' parameter is deprecated and will be removed in the next release. Fetching account ID from HTTP headers instead.\n",
-            "  client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
+        "client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n",
+        "print(os.environ[\"UE_ACCOUNT_ID\"])\n"
       ]
     },
     {
@@ -251,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -259,22 +271,7 @@
         "id": "XYAFFy6spIlt",
         "outputId": "6d98486e-84de-4539-f00c-ea7cba2c3e40"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[ProjectRecordOutput(id='689b17125d033ce54adfffea', name='Personal', owner_id='689b17125d033ce54adfffe9', description=None, members={}, created_at=datetime.datetime(2025, 8, 12, 10, 27, 30, 939000), updated_at=datetime.datetime(2025, 8, 12, 10, 27, 30, 939000)),\n",
-              " ProjectRecordOutput(id='68a332ef5d033ce54ae00177', name='Demos', owner_id='689b17125d033ce54adfffe9', description=None, members={}, created_at=datetime.datetime(2025, 8, 18, 14, 4, 31, 965000), updated_at=datetime.datetime(2025, 8, 18, 14, 4, 31, 965000)),\n",
-              " ProjectRecordOutput(id='68a333f55d033ce54ae00178', name='Amentum', owner_id='689b17125d033ce54adfffe9', description='Amentum LIBRTI', members={}, created_at=datetime.datetime(2025, 8, 18, 14, 8, 53, 295000), updated_at=datetime.datetime(2025, 8, 18, 14, 8, 53, 295000)),\n",
-              " ProjectRecordOutput(id='68add86f0c8a853d17a177c2', name='UKAEA', owner_id='689b17125d033ce54adfffe9', description=None, members={}, created_at=datetime.datetime(2025, 8, 26, 15, 53, 19, 993000), updated_at=datetime.datetime(2025, 8, 26, 15, 53, 19, 993000)),\n",
-              " ProjectRecordOutput(id='68b7fe7b0c8a853d17a179e9', name='AmentumWorkshop', owner_id='689b17125d033ce54adfffe9', description='3rd September Workshop', members={}, created_at=datetime.datetime(2025, 9, 3, 8, 38, 19, 351000), updated_at=datetime.datetime(2025, 9, 3, 8, 38, 19, 351000))]"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "client.projects.list_projects()"
       ]
@@ -298,21 +295,7 @@
         "id": "94SIN4aDSPAR",
         "outputId": "efe00b51-8349-4673-96c0-98ede33412ef"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'Personal': '689b17125d033ce54adfffea',\n",
-              " 'Demos': '68a332ef5d033ce54ae00177',\n",
-              " 'Amentum': '68a333f55d033ce54ae00178',\n",
-              " 'UKAEA': '68add86f0c8a853d17a177c2'}"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "projects_dict = {proj.name: proj.id for proj in client.projects.list_projects()}\n",
         "projects_dict"
@@ -338,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "HORQBMerqteL"
       },
@@ -366,21 +349,7 @@
         "id": "0ZTDZD-RvbZQ",
         "outputId": "2791f3dd-0fc3-4740-8b0f-95fd0344535e"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'689b17125d033ce54adfffea'"
-            ]
-          },
-          "execution_count": 18,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "PROJECT_ID = get_project_id(client=client, project_name=\"Personal\")"
       ]
@@ -448,6 +417,121 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 2.e. Listing Workflows"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We can also see which workflows we have saved."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "PROJECT_NAME = \"Demos\"\n",
+        "project_id = get_project_id(client=client, project_name=PROJECT_NAME)\n",
+        "pprint([wf.model_dump() for wf in client.workflows.list_workflows(project_id)])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 2.f. Loading Workflows"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We can load an existing workflow"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def get_workflow_id(client, project_name: str, workflow_name: str) -> str:\n",
+        "    \"\"\"\n",
+        "    Get the workflow ID from the workflow name.\n",
+        "    \"\"\"\n",
+        "    project_id = get_project_id(client, project_name)\n",
+        "    workflows = client.workflows.list_workflows(project_id)\n",
+        "    for workflow in workflows:\n",
+        "        if workflow.name == workflow_name:\n",
+        "            return workflow.id\n",
+        "    raise ValueError(f\"Workflow with name {workflow_name} not found.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "PROJECT_NAME = \"Demos\"\n",
+        "WORKFLOW_NAME = \"Add\"\n",
+        "\n",
+        "workflow_id = get_workflow_id(client=client, project_name=PROJECT_NAME, workflow_name=WORKFLOW_NAME)\n",
+        "project_id = get_project_id(client=client, project_name=PROJECT_NAME)\n",
+        "loaded_workflow = client.workflows.load(\n",
+        "    project_id=project_id, workflow_id=workflow_id\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This loaded workflow can now be ran via:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "response = client.run_node(loaded_workflow)\n",
+        "pprint(response)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 2.g. Listing Resources"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def get_resource_id(client, project_name: str, resource_name: str) -> str:\n",
+        "    \"\"\"\n",
+        "    Get the resource ID from the workflow name.\n",
+        "    \"\"\"\n",
+        "    project_id = get_project_id(client, project_name)\n",
+        "    resources = client.resources.list_resources(project_id)\n",
+        "    for resource in resources:\n",
+        "        if resource.name == resource_name:\n",
+        "            return resource.id\n",
+        "    raise ValueError(f\"Resource with name {resource_name} not found.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "d3WOZzh5pqs_"
       },
@@ -461,11 +545,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.9"
     }
   },
   "nbformat": 4,
