--- a/notebooks/01_workflow.ipynb
+++ b/notebooks/01_workflow.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "f705d867",
    "metadata": {},
    "outputs": [
@@ -325,33 +325,33 @@
      "output_type": "stream",
      "text": [
       "{'cache_url': 'redis-13325.c338.eu-west-2-1.ec2.redns.redis-cloud.com',\n",
-      " 'category': 'Datasets',\n",
+      " 'category': 'Basic',\n",
       " 'cost': 1,\n",
-      " 'description': 'Filter a dataset by column names',\n",
-      " 'id': 'FilterDataset',\n",
-      " 'image_name': 'uncertainty-engine-filter-dataset-node',\n",
-      " 'inputs': {'columns': {'default': None,\n",
-      "                        'description': 'The list of columns to keep',\n",
-      "                        'label': 'Columns',\n",
-      "                        'required': True,\n",
-      "                        'set_in_node': True,\n",
-      "                        'type': 'list[str]'},\n",
-      "            'dataset': {'default': None,\n",
-      "                        'description': 'The dataset to filter',\n",
-      "                        'label': 'Dataset',\n",
-      "                        'required': True,\n",
-      "                        'set_in_node': False,\n",
-      "                        'type': 'CSVDataset'}},\n",
-      " 'label': 'Filter Dataset',\n",
-      " 'load_balancer_url': 'http://prod-u-uncer-uiEEEKArkpdb-1134658750.eu-west-2.elb.amazonaws.com',\n",
-      " 'long_description': 'Filter a dataset by using a list of column names',\n",
-      " 'outputs': {'dataset': {'description': 'The filtered dataset',\n",
-      "                         'label': 'Dataset',\n",
-      "                         'type': 'CSVDataset'}},\n",
-      " 'queue_url': 'https://sqs.eu-west-2.amazonaws.com/939027885851/prod-uncertainty-engine-filter-da-uncertaintyenginefilterdatasetnod-JP4Gim4gGoRh',\n",
+      " 'description': 'Sum two numbers',\n",
+      " 'id': 'Add',\n",
+      " 'image_name': 'uncertainty-engine-add-node',\n",
+      " 'inputs': {'lhs': {'default': None,\n",
+      "                    'description': 'Left-hand side of the addition',\n",
+      "                    'label': 'LHS',\n",
+      "                    'required': True,\n",
+      "                    'set_in_node': True,\n",
+      "                    'type': 'float'},\n",
+      "            'rhs': {'default': None,\n",
+      "                    'description': 'Right-hand side of the addition',\n",
+      "                    'label': 'RHS',\n",
+      "                    'required': True,\n",
+      "                    'set_in_node': True,\n",
+      "                    'type': 'float'}},\n",
+      " 'label': 'Add',\n",
+      " 'load_balancer_url': 'http://prod-u-uncer-8Dm4BCeDOhUv-2026795141.eu-west-2.elb.amazonaws.com',\n",
+      " 'long_description': 'Add two numbers together',\n",
+      " 'outputs': {'ans': {'description': 'Result of the addition',\n",
+      "                     'label': 'Answer',\n",
+      "                     'type': 'float'}},\n",
+      " 'queue_url': 'https://sqs.eu-west-2.amazonaws.com/939027885851/prod-uncertainty-engine-add-node-uncertaintyengineaddnodeQueueFF3B1-7VhRgceGZMHS',\n",
       " 'requirements': {'cpu': 256, 'gpu': False, 'memory': 512, 'timeout': 15},\n",
       " 'version_base_image': 2,\n",
-      " 'version_node': 0,\n",
+      " 'version_node': 3,\n",
       " 'version_types_lib': '0.4.0'}\n"
      ]
     }
@@ -361,9 +361,9 @@
     "    nodes = client.list_nodes()\n",
     "    nodes_by_id = {node[\"id\"]: node for node in nodes}\n",
     "\n",
-    "    # Print the details of the `Add` node\n",
+    "    # Print the details of the node\n",
     "    pprint(nodes_by_id[node_name])\n",
-    "get_node_info('FilterDataset')"
+    "get_node_info('Add')"
    ]
   },
   {
