--- a/notebooks/03_train_model_workflow.ipynb
+++ b/notebooks/03_train_model_workflow.ipynb
@@ -5,7 +5,7 @@
    "id": "4fcc6370",
    "metadata": {},
    "source": [
-    "# Train and Predict Workflows in the Uncertainty Engine SDK"
+    "# Train Model Workflows in the Uncertainty Engine SDK"
    ]
   },
   {
@@ -16,7 +16,7 @@
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
     "https://colab.research.google.com/github/digiLab-ai/ue-sdk-helper/blob/main/notebooks/03_train_model_workflow.ipynb)\n",
     "\n",
-    "In this notebook, we go through how to train and predict in the SDK."
+    "In this notebook, we go through how to train a model in the SDK."
    ]
   },
   {
@@ -182,17 +182,7 @@
    "execution_count": null,
    "id": "d70f3cff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "# automatically load .env in current directory\n",
@@ -222,16 +212,7 @@
    "execution_count": null,
    "id": "118ab0e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipython-input-2640184759.py:1: DeprecationWarning: The 'account_id' parameter is deprecated and will be removed in the next release. Fetching account ID from HTTP headers instead.\n",
-      "  client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
    ]
@@ -254,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a3279491",
    "metadata": {},
    "outputs": [],
@@ -315,12 +296,6 @@
     "    A workflow that trains a machine learning model.\n",
     "    Here, we assume all resources have already been uploaded to the cloud.\n",
     "    Simplified methods exist for local data.\n",
-    "    Args:\n",
-    "        client: An authenticated Uncertainty Engine client.\n",
-    "        a (float): The first number to add.\n",
-    "        b (float): The second number to add.\n",
-    "    Returns:\n",
-    "        dict: The response from the Uncertainty Engine after executing the workflow.\n",
     "    \"\"\"\n",
     "    # Create the graph\n",
     "    graph = Graph()\n",
@@ -381,7 +356,8 @@
     "    save = Node(\n",
     "        node_name=\"Save\",\n",
     "        label=\"Save\",\n",
-    "        file=output_model\n",
+    "        file=output_model,\n",
+    "        fileid=save_model_name,\n",
     "    )\n",
     "    graph.add_node(save)\n",
     "\n",
