--- a/notebooks/04_predict_model_workflow copy.ipynb
+++ b/notebooks/04_predict_model_workflow copy.ipynb
@@ -5,7 +5,7 @@
    "id": "4fcc6370",
    "metadata": {},
    "source": [
-    "# Train and Predict Workflows in the Uncertainty Engine SDK"
+    "# Predict from a Model Workflows in the Uncertainty Engine SDK"
    ]
   },
   {
@@ -14,9 +14,9 @@
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "https://colab.research.google.com/github/digiLab-ai/ue-sdk-helper/blob/main/notebooks/03_train_model_workflow.ipynb)\n",
+    "https://colab.research.google.com/github/digiLab-ai/ue-sdk-helper/blob/main/notebooks/04_predict_model_workflow.ipynb)\n",
     "\n",
-    "In this notebook, we go through how to train and predict in the SDK."
+    "In this notebook, we go through how to predict from a trained model in the SDK."
    ]
   },
   {
@@ -182,17 +182,7 @@
    "execution_count": null,
    "id": "d70f3cff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "# automatically load .env in current directory\n",
@@ -222,16 +212,7 @@
    "execution_count": null,
    "id": "118ab0e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipython-input-2640184759.py:1: DeprecationWarning: The 'account_id' parameter is deprecated and will be removed in the next release. Fetching account ID from HTTP headers instead.\n",
-      "  client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
    ]
@@ -241,7 +222,7 @@
    "id": "ba41334e",
    "metadata": {},
    "source": [
-    "# 2. Save a Workflow"
+    "# 2. Predict Workflow"
    ]
   },
   {
@@ -254,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a3279491",
    "metadata": {},
    "outputs": [],
@@ -303,102 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_and_save_model_workflow(client, \n",
-    "                   project_name: str,\n",
-    "                   dataset_name: str, \n",
-    "                   input_names: list,\n",
-    "                   output_names: list,\n",
-    "                   save_model_name: str,\n",
-    "                   is_visualise_workflow: bool = False,\n",
-    "                   is_print_full_output: bool = False) -> dict:\n",
-    "    \"\"\"\n",
-    "    A workflow that trains a machine learning model.\n",
-    "    Here, we assume all resources have already been uploaded to the cloud.\n",
-    "    Simplified methods exist for local data.\n",
-    "    Args:\n",
-    "        client: An authenticated Uncertainty Engine client.\n",
-    "        a (float): The first number to add.\n",
-    "        b (float): The second number to add.\n",
-    "    Returns:\n",
-    "        dict: The response from the Uncertainty Engine after executing the workflow.\n",
-    "    \"\"\"\n",
-    "    # Create the graph\n",
-    "    graph = Graph()\n",
-    "\n",
-    "    # Create relevant nodes:\n",
-    "\n",
-    "    # Define the model config node\n",
-    "    model_config = Node(\n",
-    "        node_name=\"ModelConfig\",\n",
-    "        label=\"Model Config\",\n",
-    "    )\n",
-    "    graph.add_node(model_config)\n",
-    "    # Add a handle to the the config output\n",
-    "    output_config = model_config.make_handle(\"config\")\n",
-    "\n",
-    "    # Define the load dataset node\n",
-    "    load_data = Node(\n",
-    "        node_name=\"LoadDataset\",\n",
-    "        label=\"Load Dataset\",\n",
-    "        file_id=get_resource_id(client=client, project_name=project_name, resource_name=dataset_name),\n",
-    "        project_id=get_project_id(client=client, project_name=project_name),\n",
-    "    )\n",
-    "    graph.add_node(load_data)\n",
-    "    dataset = load_data.make_handle(\"dataset\")\n",
-    "\n",
-    "    # Define the input filter dataset node\n",
-    "    input_data = Node(\n",
-    "        node_name=\"FilterDataset\",\n",
-    "        label=\"Input Dataset\",\n",
-    "        columns=input_names,\n",
-    "        dataset=dataset,\n",
-    "    )\n",
-    "    graph.add_node(input_data)\n",
-    "    input_dataset = load_data.make_handle(\"input_dataset\")\n",
-    "\n",
-    "    # Define the output filter dataset node\n",
-    "    output_data = Node(\n",
-    "        node_name=\"FilterDataset\",\n",
-    "        label=\"Output Dataset\",\n",
-    "        columns=output_names,\n",
-    "        dataset=dataset,\n",
-    "    )\n",
-    "    graph.add_node(output_data)\n",
-    "    output_dataset = load_data.make_handle(\"output_dataset\")\n",
-    "\n",
-    "\n",
-    "    # Define the train model node\n",
-    "    train_model = Node(\n",
-    "        node_name=\"TrainModel\",\n",
-    "        label=\"Train Model\",\n",
-    "        config=output_config,\n",
-    "        inputs=input_dataset,\n",
-    "        outputs=output_dataset,\n",
-    "    )\n",
-    "    graph.add_node(train_model)\n",
-    "    # Add a handle to the the config output\n",
-    "    output_model = train_model.make_handle(\"model\")\n",
-    "    save = Node(\n",
-    "        node_name=\"Save\",\n",
-    "        label=\"Save\",\n",
-    "        file=output_model\n",
-    "    )\n",
-    "    graph.add_node(save)\n",
-    "\n",
-    "    if is_visualise_workflow:\n",
-    "        pprint(graph.nodes)\n",
-    "\n",
-    "    workflow = Workflow(\n",
-    "        graph=graph.nodes,\n",
-    "        inputs=graph.external_input,\n",
-    "        external_input_id=graph.external_input_id,\n",
-    "        requested_output={\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "    response = client.run_node(workflow)\n",
-    "    if is_print_full_output:\n",
-    "        pprint(response.model_dump())"
+    "# todo"
    ]
   },
   {
