Update helper functions ready for workflow tidy-up

--- a/notebooks/01_workflow.ipynb
+++ b/notebooks/01_workflow.ipynb
@@ -169,17 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6908cdd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install --quiet python-dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5f7bb755",
    "metadata": {},
    "outputs": [
@@ -195,9 +185,11 @@
     }
    ],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "# automatically load .env in current directory\n",
-    "load_dotenv()"
+    "if is_local:\n",
+    "    !pip install --quiet python-dotenv\n",
+    "    from dotenv import load_dotenv\n",
+    "    # automatically load .env in current directory\n",
+    "    load_dotenv()"
    ]
   },
   {
@@ -316,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "f705d867",
    "metadata": {},
    "outputs": [
@@ -360,9 +352,9 @@
     "def get_node_info(node_name):\n",
     "    nodes = client.list_nodes()\n",
     "    nodes_by_id = {node[\"id\"]: node for node in nodes}\n",
-    "\n",
     "    # Print the details of the node\n",
     "    pprint(nodes_by_id[node_name])\n",
+    "    \n",
     "get_node_info('Add')"
    ]
   },
