--- a/notebooks/02_resources.ipynb
+++ b/notebooks/02_resources.ipynb
@@ -184,18 +184,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install --quiet python-dotenv"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from dotenv import load_dotenv\n",
-        "# automatically load .env in current directory\n",
-        "load_dotenv()"
+        "if is_local:\n",
+        "    !pip install --quiet python-dotenv\n",
+        "    from dotenv import load_dotenv\n",
+        "    # automatically load .env in current directory\n",
+        "    load_dotenv()"
       ]
     },
     {
@@ -389,6 +382,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def upload_dataset(client, project_name, dataset_name, file_path, is_replace=True):\n",
+        "    PROJECT_ID = get_project_id(client, project_name)\n",
+        "    try:\n",
+        "        resource_id = client.resources.upload(\n",
+        "            project_id=PROJECT_ID,\n",
+        "            name=dataset_name,\n",
+        "            resource_type=\"dataset\",\n",
+        "            file_path=file_path,\n",
+        "        )\n",
+        "    except Exception as e:\n",
+        "        if is_replace:\n",
+        "            resource_id = client.resources.update(\n",
+        "                project_id=PROJECT_ID,\n",
+        "                resource_id=get_resource_id(client, project_name, dataset_name),\n",
+        "                resource_type=\"dataset\",\n",
+        "                file_path=file_path,\n",
+        "            )\n",
+        "        else:\n",
+        "            print(f\"Error uploading dataset: {e}\")\n",
+        "    print('Uploaded', resource_id)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -518,12 +539,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def get_resource_id(client, project_name: str, resource_name: str) -> str:\n",
+        "def get_resource_id(client, project_name: str, resource_name: str, resource_type: str) -> str:\n",
         "    \"\"\"\n",
         "    Get the resource ID from the workflow name.\n",
         "    \"\"\"\n",
         "    project_id = get_project_id(client, project_name)\n",
-        "    resources = client.resources.list_resources(project_id)\n",
+        "    resources = client.resources.list_resources(project_id, resource_type=\"dataset\")\n",
         "    for resource in resources:\n",
         "        if resource.name == resource_name:\n",
         "            return resource.id\n",
