--- a/notebooks/04_predict_model_workflow copy.ipynb
+++ b/notebooks/04_predict_model_workflow copy.ipynb
@@ -170,23 +170,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a8c3374",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install --quiet python-dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d70f3cff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "# automatically load .env in current directory\n",
-    "load_dotenv()"
+    "if is_local:\n",
+    "    !pip install --quiet python-dotenv\n",
+    "    from dotenv import load_dotenv\n",
+    "    # automatically load .env in current directory\n",
+    "    load_dotenv()"
    ]
   },
   {
@@ -284,7 +276,194 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# todo"
+    "# todo\n",
+    "\n",
+    "from uncertainty_engine_types import ResourceID\n",
+    "\n",
+    "def wrap_resource_id(resource_id: str):\n",
+    "  return ResourceID(id=resource_id).model_dump()\n",
+    "\n",
+    "def get_project_id(client, project_name: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Get the project ID from the project name.\n",
+    "    \"\"\"\n",
+    "    projects = client.projects.list_projects()\n",
+    "    for project in projects:\n",
+    "        if project.name == project_name:\n",
+    "            return project.id\n",
+    "    raise ValueError(f\"Project with name {project_name} not found.\")\n",
+    "\n",
+    "def get_workflow_id(client, project_name: str, workflow_name: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Get the workflow ID from the workflow name.\n",
+    "    \"\"\"\n",
+    "    project_id = get_project_id(client, project_name)\n",
+    "    workflows = client.workflows.list_workflows(project_id)\n",
+    "    for workflow in workflows:\n",
+    "        if workflow.name == workflow_name:\n",
+    "            return workflow.id\n",
+    "    raise ValueError(f\"Workflow with name {workflow_name} not found.\")\n",
+    "\n",
+    "def get_resource_id(client, project_name: str, resource_name: str, resource_type: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Get the resource ID from the workflow name.\n",
+    "    \"\"\"\n",
+    "    project_id = get_project_id(client, project_name)\n",
+    "    resources = client.resources.list_resources(project_id, resource_type=resource_type)\n",
+    "    for resource in resources:\n",
+    "        if resource.name == resource_name:\n",
+    "            return resource.id\n",
+    "    raise ValueError(f\"Resource with name {resource_name} not found.\")\n",
+    "\n",
+    "def upload_dataset(client, project_name, dataset_name, file_path=None, dataset=None, is_replace=True):\n",
+    "    PROJECT_ID = get_project_id(client, project_name)\n",
+    "    if file_path is None and dataset is not None:\n",
+    "\n",
+    "        file_path = f'{dataset_name}.csv'\n",
+    "\n",
+    "        df = pd.DataFrame(dataset)\n",
+    "        df.to_csv(file_path, index=False)\n",
+    "    elif file_path is None and dataset is None:\n",
+    "        raise ValueError(\"Either file_path or dataset must be provided.\")\n",
+    "    \n",
+    "    try:\n",
+    "        client.resources.upload(\n",
+    "            project_id=PROJECT_ID,\n",
+    "            name=dataset_name,\n",
+    "            resource_type=\"dataset\",\n",
+    "            file_path=file_path,\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        if is_replace:\n",
+    "            client.resources.update(\n",
+    "                project_id=PROJECT_ID,\n",
+    "                resource_id=get_resource_id(client, project_name, dataset_name, resource_type=\"dataset\"),\n",
+    "                resource_type=\"dataset\",\n",
+    "                file_path=file_path,\n",
+    "            )\n",
+    "        else:\n",
+    "            print(f\"Error uploading dataset: {e}\")\n",
+    "    print(f'Uploaded {dataset_name} to {project_name}')\n",
+    "\n",
+    "def get_node_info(node_name):\n",
+    "    nodes = client.list_nodes()\n",
+    "    nodes_by_id = {node[\"id\"]: node for node in nodes}\n",
+    "    # Print the details of the node\n",
+    "    pprint(nodes_by_id[node_name])\n",
+    "\n",
+    "def predict_model_workflow(client, \n",
+    "                   project_name: str,\n",
+    "                   inputs: dict, \n",
+    "                   model_name: str,\n",
+    "                   is_visualise_workflow: bool = False,\n",
+    "                   is_print_full_output: bool = True) -> dict:\n",
+    "    \"\"\"\n",
+    "    A workflow that trains a machine learning model.\n",
+    "    Here, we assume all resources have already been uploaded to the cloud.\n",
+    "    Simplified methods exist for local data.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    file_path = 'data.csv'\n",
+    "    dataset_name = 'data'\n",
+    "\n",
+    "    df = pd.DataFrame(inputs)\n",
+    "    df.to_csv(file_path, index=False)\n",
+    "\n",
+    "    upload_dataset(client, project_name, dataset_name, file_path)\n",
+    "    file_id=get_resource_id(client=client, project_name=project_name, \n",
+    "                            resource_name=model_name, resource_type='model')\n",
+    "    project_id=get_project_id(client=client, project_name=project_name)\n",
+    "\n",
+    "    # Create the graph\n",
+    "    graph = Graph()\n",
+    "\n",
+    "    # Create relevant nodes:\n",
+    "    \n",
+    "    load_data = Node(\n",
+    "        node_name=\"LoadDataset\",\n",
+    "        label=\"Load Dataset\",\n",
+    "        file_id=wrap_resource_id(get_resource_id(client=client, project_name=project_name, \n",
+    "                                resource_name=dataset_name, resource_type='dataset')),\n",
+    "        project_id=get_project_id(client=client, project_name=project_name),\n",
+    "    )\n",
+    "    graph.add_node(load_data)\n",
+    "    dataset = load_data.make_handle(\"dataset\")\n",
+    "\n",
+    "\n",
+    "    load_model = Node(\n",
+    "        node_name=\"LoadModel\",\n",
+    "        label=\"Load Model\",\n",
+    "        file_id=wrap_resource_id(get_resource_id(client=client, project_name=project_name, \n",
+    "                                resource_name=model_name, resource_type='model')),\n",
+    "        project_id=get_project_id(client=client, project_name=project_name),\n",
+    "\n",
+    "    )\n",
+    "    graph.add_node(load_model)\n",
+    "    # Add a handle to the the config output\n",
+    "    output_model = load_model.make_handle(\"model\")\n",
+    "\n",
+    "    # Define the predict model node\n",
+    "    predict = Node(\n",
+    "    node_name=\"PredictModel\",\n",
+    "    label=\"Predict\",\n",
+    "        dataset=dataset,\n",
+    "        model=output_model,\n",
+    "    seed=42,\n",
+    "    )\n",
+    "\n",
+    "    # Add the predict node to the graph\n",
+    "    graph.add_node(predict)\n",
+    "    # predict = Node(\n",
+    "    #     node_name=\"PredictModel\",\n",
+    "    #     label=\"Predict\",\n",
+    "    #     model=output_model,\n",
+    "    #     dataset=dataset,\n",
+    "    # )\n",
+    "    # graph.add_node(predict)\n",
+    "    # Add a handle to the the config output\n",
+    "    # output_model = predict.make_handle(\"prediction\")\n",
+    "    \n",
+    "    output_predictions = predict.make_handle(\"prediction\")\n",
+    "    output_uncertainty = predict.make_handle(\"uncertainty\")\n",
+    "\n",
+    "    # # Define download nodes for predictions and uncertainty\n",
+    "    # download_predictions = Node(\n",
+    "    #     node_name=\"Download\", label=\"Download Predictions\", file=output_predictions\n",
+    "    # )\n",
+    "    # download_uncertainty = Node(\n",
+    "    #     node_name=\"Download\", label=\"Download Uncertainty\", file=output_uncertainty\n",
+    "    # )\n",
+    "    # graph.add_node(download_predictions)\n",
+    "    # graph.add_node(download_uncertainty)\n",
+    "    # output_download_predictions = download_predictions.make_handle(\"file\")\n",
+    "    # output_download_uncertainty = download_uncertainty.make_handle(\"file\")\n",
+    "\n",
+    "    if is_visualise_workflow:\n",
+    "        pprint(graph.nodes)\n",
+    "\n",
+    "    workflow = Workflow(\n",
+    "        graph=graph.nodes,\n",
+    "        inputs=graph.external_input,\n",
+    "        external_input_id=graph.external_input_id,\n",
+    "        requested_output={\n",
+    "            # \"Predictions\": output_download_predictions.model_dump(),\n",
+    "            # \"Uncertainty\": output_download_uncertainty.model_dump(),\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    response = client.run_node(workflow)\n",
+    "    if is_print_full_output:\n",
+    "        pprint(response.model_dump())\n",
+    "\n",
+    "    pred_mean = response.outputs[\"outputs\"][\"Predictions\"]\n",
+    "\n",
+    "    pred_uncert = response.outputs[\"outputs\"][\"Uncertainty\"]\n",
+    "\n",
+    "    print(pred_mean)\n",
+    "    print(pred_uncert)\n",
+    "    df_pred = pd.read_csv(pred_mean)\n",
+    "    df_std = pd.read_csv(pred_uncert)\n",
+    "    return df_pred, df_std"
    ]
   },
   {
