Update train and save workflow

--- a/notebooks/00_client.ipynb
+++ b/notebooks/00_client.ipynb
@@ -170,23 +170,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5839e7a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install --quiet python-dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f7abf583",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "# automatically load .env in current directory\n",
-    "load_dotenv()"
+    "if is_local:\n",
+    "    !pip install --quiet python-dotenv\n",
+    "    from dotenv import load_dotenv\n",
+    "    # automatically load .env in current directory\n",
+    "    load_dotenv()"
    ]
   },
   {
@@ -214,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
+    "client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])"
    ]
   },
   {
